Dynamic colour change now occurs with scrolling. Some documentation required

--- a/Website/index.html
+++ b/Website/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,10 +14,10 @@
     <header>
         <h2 href="#" class="logo">Traveler's Workshop</h2>
         <div id="nav">
-            <li><button onclick="toHome();">Home</button></li>
-            <li><button onclick="toAbout();">About</button></li>
-            <li><button onclick="notDone();">Projects</button></li>
-            <li><button onclick="toContact();">Contact</button></li>
+            <li><button class="buttons" onclick="toHome();">Home</button></li>
+            <li><button class="buttons" onclick="toAbout();">About</button></li>
+            <li><button class="buttons" onclick="notDone();">Projects</button></li>
+            <li><button class="buttons" onclick="toContact();">Contact</button></li>
         </div>
     </header>
     <section>
